--- a/.github/workflows/build-timesink.yml
+++ b/.github/workflows/build-timesink.yml
@@ -2,7 +2,7 @@ name: build-experimental-timesink-image
 on:
   pull_request:
   schedule:
-    - cron: '0 0 * * 0'
+    - cron: '00 16 * * *'
   push:
       branches:
         - "main"
@@ -60,8 +60,8 @@ jobs:
       - name: Build image
         shell: bash
         run: |
-          podman build --label=org.opencontainers.image.title=ald-utils \
-            --label=org.opencontainers.image.description=ald-utils \
+          podman build --label=org.opencontainers.image.title=ald-cosmic-nvidia \
+            --label=org.opencontainers.image.description=ald-cosmic-nvidia \
             --label=org.opencontainers.image.version=main \
             --pull=newer --tag="localhost/timesink" \
             -f ./Containerfile.timesink
