--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,14 @@
 name: build-ald-utils
 on:
   pull_request:
-  #  schedule:
-  #    - cron: '0 0 * * 0'
-  push:
-     branches:
-       - "main"
+    #  schedule:
+    #    - cron: '0 0 * * 0'
+    push:
+      branches:
+        - "main"
+    paths:
+      - 'boot/**'
+      - 'files/**'
   workflow_dispatch:
 
 env:
