save id in deployment root

--- a/.github/workflows/build-timesink.yml
+++ b/.github/workflows/build-timesink.yml
@@ -9,6 +9,9 @@ on:
     paths:
       - 'boot/**'
       - 'files/**'
+      - 'Containerfile.timesink'
+      - 'librarizer'
+      - '.github/workflows/build-timesink.yml'
   workflow_dispatch:
 
 env:
