add dependency check adjust xargs parameters

--- a/.github/workflows/build-timesink.yml
+++ b/.github/workflows/build-timesink.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - 'boot/**'
       - 'files/**'
+      - 'tools/**'
       - 'Containerfile.timesink'
       - 'librarizer'
       - '.github/workflows/build-timesink.yml'
