--- a/.github/workflows/build-timesink.yml
+++ b/.github/workflows/build-timesink.yml
@@ -8,7 +8,7 @@ on:
       - "main"
     paths:
       - 'boot/**'
-      - 'files/**'
+      - 'src/**'
       - 'tools/**'
       - 'Containerfile.timesink'
       - 'librarizer'
