--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - "main"
     paths:
-      - 'files/**'
+      - 'src/**'
       - 'Containerfile'
       - '.github/workflows/build.yml'
   workflow_dispatch:
