cleanup dracut module

--- a/boot/ald-boot.service
+++ b/boot/ald-boot.service
@@ -16,3 +16,6 @@ StandardInput=null
 StandardOutput=journal
 StandardError=journal+console
 RemainAfterExit=yes
+
+[Install]
+WantedBy=initrd-root-fs.target
