add move-mount-beneath and erofs dependency to prepare for ro /usr images

--- a/.github/workflows/build-timesink.yml
+++ b/.github/workflows/build-timesink.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Enable sigstore
+      - name: Enable sigstore and init submodules
         shell: bash
         run: |
           sudo mkdir -p /etc/containers/registries.d
@@ -47,6 +47,8 @@ jobs:
           echo "docker:" | sudo tee /etc/containers/registries.d/"${{ github.repository_owner }}".yaml
           echo "  ${{ env.IMAGE_REGISTRY }}:" | sudo tee -a /etc/containers/registries.d/"${{ github.repository_owner }}".yaml
           echo "    use-sigstore-attachments: true" | sudo tee -a /etc/containers/registries.d/"${{ github.repository_owner }}".yaml
+
+          git submodule update --init --recursive
 
       - name: Gather environment variables
         shell: bash
